--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "apollo-upload-client": "^14.1.3",
     "axios": "^0.21.1",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
